syntax = "proto3";

package payment.v1;

import "validate/validate.proto";

option go_package = "github.com/restinbass/payment-service/proto/payment/v1;payment_v1";

service PaymentService {
    // PayOrder - Произвести оплату заказа
    rpc PayOrder(PayOrderRequest) returns (PayOrderResponse);
}

// PayOrderRequest - Запрос на оплату заказа
message PayOrderRequest {
    string order_uuid = 1 [(validate.rules).string = { uuid: true }];
    string user_uuid = 2 [(validate.rules).string = { uuid: true }];
    PaymentMethod payment_method = 3 [(validate.rules).enum = { not_in: [0] }];

    // PaymentMethod - Способ оплаты заказа
    enum PaymentMethod {
        PAYMENT_METHOD_UNSPECIFIED = 0;
        PAYMENT_METHOD_CARD = 1;
        PAYMENT_METHOD_SBP = 2;
        PAYMENT_METHOD_CREDIT_CARD = 3;
        PAYMENT_METHOD_INVESTOR_MONEY = 4;
    }
}

// PayOrderResponse - Ответ операции оплаты заказа
message PayOrderResponse {
    string transaction_uuid = 1;
}
